--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "17.0.2",
     "react-deep-force-update": "2.1.3",
     "react-dom": "17.0.2",
+    "react-icons": "^4.7.1",
     "react-redux": "7.2.8",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2",
